# dagster-dbt-demo

./: .gitignore  README.md  defs.txt  docker-compose.yml  pyproject.toml
.dg/: schema.json
dbt/: .user.yml  dbt_project.yml  package-lock.yml
dbt/jaffle_dagster/: assets.py  definitions.py  project.py  schedules.py
dbt/jdbt/: .user.yml  dbt_project.yml  packages.yml
dbt/jdbt/models/marts/: customers.yml  order_items.sql  order_items.yml  orders.yml  schema.yml  supplies.sql
dbt/jdbt/models/staging/: schema.yml
dbt/jdbt/models/stg/: stg_order_items.sql  stg_order_items.yml  stg_orders.sql  stg_products.yml  stg_stores.yml  stg_supplies.sql  stg_supplies.yml
dbt/macros/: cents_to_dollars.sql
dbt/models/marts/: customers.yml  order_items.yml  orders.yml  products.sql  products.yml  supplies.yml  tweets.yml
dbt/models/stg/: sources.yml  stg_customers.sql  stg_customers.yml  stg_order_items.yml  stg_orders.yml  stg_stores.sql  stg_stores.yml  stg_supplies.yml  stg_tweets.yml
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/marts/: customers.sql  customers.yml  orders.sql  orders.yml  supplies.yml  tweets.sql  tweets.yml
dbt_project/models/stg/: sources.yml  stg_order_items.yml  stg_orders.yml  stg_products.sql  stg_products.yml  stg_tweets.sql
dlt_sources/: filesystem_pipeline.py  requirements.txt
dlt_sources/.dlt/: secrets.toml
docker-entrypoint-initdb.d/: init-extra-db.sql
sqlmesh_project/: config.yaml
sqlmesh_project/models/: full_model.sql  incremental_model.sql
sqlmesh_project/models/marts/: customers.sql  order_items.sql  orders.sql  products.sql  supplies.sql  tweets.sql
sqlmesh_project/models/seeds/: raw_customers.sql  raw_items.sql  raw_orders.sql  raw_products.sql  raw_stores.sql  raw_supplies.sql  raw_tweets.sql  seed_model.sql
sqlmesh_project/models/stg/: stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_stores.sql  stg_supplies.sql  stg_tweets.sql
src/jaffle_platform/: __init__.py  definitions.py
src/jaffle_platform/defs/: daily_jaffle.py
src/jaffle_platform/defs/assets/: dbt_assets.py  downstream_asset_test.py  product_sentiment_scores.py
src/jaffle_platform/defs/assets_checks/: product_sentiment_scores.py  product_sentiment_scores_simple_checks.py  raw_sources_checks.py
src/jaffle_platform/defs/assets_freshness_checks/: dbt_checks.py
src/jaffle_platform/dlt_sources/: filesystem_pipeline.py
storage/96ffb0c4-20db-48c6-bbac-8216e73c488d/compute_logs/: kknzewwf.err
storage/cbebe0f4-83af-4b53-ae0b-1c24a458f341/compute_logs/: dwbptmhl.err
storage/f472bfb0-4c11-48f3-9e25-e207ea3cd205/compute_logs/: nbedztkd.err
storage/fda944a7-fd83-43a6-9613-f397f637227a/compute_logs/: jlcsesri.err
tools/: flush_postgres_tables.py  parquet_file_generator.py  sqlmesh_utils.py
(+23 files in other folders)
