[project]
name = "jaffle_platform"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
dependencies = [
    "dagster==1.10.21",
    "dagster-dbt>=0.26.20",
    "dagster-dlt>=0.26.20",
    "dagster-duckdb>=0.26.20",
    "dagster-duckdb-pandas>=0.26.20",
    "dagster-evidence>=0.1.6",
    "dagster-sling>=0.26.20",
    "dbt-duckdb>=1.9.3",
    "duckdb>=1.3.1",
    "great-expectations>=0.18.22",
    "jafgen>=0.4.14",
    "nltk>=3.8.1",
    "pandas>=2.2.1",
    "soda-core-duckdb>=3.3.20",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli[local]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "jaffle_platform"
registry_modules = [
    "jaffle_platform.components.*",
]


